--- a/app/views/grants/new.html.erb
+++ b/app/views/grants/new.html.erb
@@ -2,4 +2,10 @@
 
 <%= render 'form', grant: @grant %>
 
-<%= link_to 'Powrót', grants_path %>
+<div class="row">
+  <div class="col-md-12">
+    <div class="row top-buffer-20">
+      <%= link_to 'Powrót', grants_path,  class:"btn btn-secondary" %>
+    </div>
+  </div>  
+</div>
