--- a/app/views/inventory_entries/edit.html.erb
+++ b/app/views/inventory_entries/edit.html.erb
@@ -2,4 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Wstecz', inventory_entries_path %>
+    <div class="row top-buffer-20">
+      <div class="col-md-12">
+        <%= link_to 'Powrót do książki', inventory_entries_path, class: "btn btn-sm btn-default" %>
+      </div>
+    </div>
