--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -40,7 +40,7 @@
 
 <div class="row top-buffer-20">
   <div class="col-md-12">
-    <%= link_to 'Edytuj', edit_entry_path(@entry), class: "btn btn-sm btn-primary mx-2" %>   |
+    <%= link_to 'Edytuj', edit_entry_path(@entry), class: "btn btn-sm btn-primary mx-2" %>
     <%= link_to 'Wstecz', journal_path(@entry.journal), class: "btn btn-sm btn-secondary mx-1" %>
   </div>
 </div>
