--- a/app/views/inventory_entries/show.html.erb
+++ b/app/views/inventory_entries/show.html.erb
@@ -29,7 +29,7 @@
 
 <div class="col-md-12">
   <div class="row">
-    <div class="row-top-buffer-20">
+    <div class="row top-buffer-20">
             <p>
         <b>Nazwa:</b>
         <%= @inventory_entry.name %>
