--- a/app/views/inventory_entries/show.html.erb
+++ b/app/views/inventory_entries/show.html.erb
@@ -15,7 +15,7 @@
           <%= @inventory_entry.document_number %>
           </p>
         </div>
-        <div class="row-top-buffer-20">
+        <div class="row top-buffer-20">
           <div class="col-md-12">
             <p><b>Opis:</b>
             <%= @inventory_entry.remark %>
