--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-md-3">
             <%= f.label :data %>
-            <%= f.text_field :date, class: "form-control" %>
+            <%= f.text_field :date, class: "form-control", autocomplete: "off" %>
           </div>
           <div class="col-md-6 col-md-offset-3">
             <%= f.label :Numer_dokumentu %>
