Dodanie szarej lini oddzielającej

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -82,6 +82,8 @@
     <% end %>
   </div>
 
+  <hr class="my-3" style="border-top-width: 5px;">
+
   <!-- Pole sumy -->
   <div class="row top-buffer-20">
     <div class="col-md-2">
