--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,6 +16,12 @@ table.users tr.invited td { color: #aaa; }
   </div>
 </div>
 
+<div class="row top-buffer-20">
+  <div class="col-md-4">
+    <%= text_field_tag :query, params[:query], placeholder: "Szukaj ...", class: "form-control", id: "users-search" %>
+  </div>
+</div>
+
 <table class="table table-condensed top-buffer-20">
   <tr>
     <th>E-mail</th>
