feat: dodano obsługę wyszukiwania units w widoku users #238

--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -2,6 +2,11 @@
   function reloadForYear(year) {
     document.location.href = "<%= units_path %>?year=" + year;
   }
+
+
+  document.addEventListener('DOMContentLoaded', function () {
+    initSearch('units');
+  });
 </script>
 
 <div class="row">
