--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,9 @@
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    initSearch('users');
+  });
+</script>
+
 <style type="text/css">
 table.users tr.invited td { color: #aaa; }
 </style>
