--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -2,11 +2,11 @@
   function reloadForYear(year) {
     document.location.href = "<%= units_path %>?year=" + year;
   }
-
-
+  
   document.addEventListener('DOMContentLoaded', function () {
-    initSearch('units');
+    initSearch('units-search', 'table tbody tr');
   });
+
 </script>
 
 <div class="row">
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-<table class="table table-condensed top-buffer-20">
+<table class="table table-condensed top-buffer-20 units">
   <tr>
     <th rowspan="3">Kod</th>
     <th class="name-cell" rowspan="3">Nazwa</th>
@@ -77,10 +77,10 @@
   </tr>
   <tr>
     <th>&nbsp;</th>
-    <th class="text-right">1%</th>
+    <th class="text-right">1,5%</th>
     <th class="text-right">blokada</th>
     <th>&nbsp;</th>
-    <th class="text-right">1%</th>
+    <th class="text-right">1,5%</th>
     <th class="text-right">blokada</th>
   </tr>
 
