feat: przeszukiwanie użytkowników i jednostek (#242)
* feat: dodano uniwersalne wyszukiwanie users/units #238

* feat: dodano obsługę wyszukiwania units w widoku users #238

* Naprawiono funkcjonalność wyszukiwania (per sugestię Perka)

* Update app/views/units/index.html.erb

* Update app/views/users/index.html.erb

---------

Co-authored-by: Marcin Stożek <marcin.stozek@gmail.com>

--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -2,6 +2,11 @@
   function reloadForYear(year) {
     document.location.href = "<%= units_path %>?year=" + year;
   }
+  
+  document.addEventListener('DOMContentLoaded', function () {
+    initSearch('units-search', 'table tbody tr');
+  });
+
 </script>
 
 <div class="row">
@@ -48,7 +53,13 @@
   </div>
 </div>
 
-<table class="table table-condensed top-buffer-20">
+<div class="row top-buffer-20">
+  <div class="col-md-4">
+    <%= text_field_tag :query, params[:query], placeholder: "Szukaj...", class: "form-control", id: "units-search" %>
+  </div>
+</div>
+
+<table class="table table-condensed top-buffer-20 units">
   <tr>
     <th rowspan="3">Kod</th>
     <th class="name-cell" rowspan="3">Nazwa</th>
