--- a/app/views/reports/one_percent.pdf.erb
+++ b/app/views/reports/one_percent.pdf.erb
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<%= render 'reports/finance_template.html.erb' %>
+<%= render partial: "reports/finance_template", formats: [:html] %>
 
 <div class="row">
   <div class="col-md-12">
